- :issue:`540`: correctly support models that don't have a column named "id".
- :issue:`546`: adds support for joined table inheritance.
- :issue:`548`: requests can now use the ``Accept: */*`` header.
- :issue:`559`: fixes bug that stripped attributes with JSON API reserved names
  (like "type") when deserializing resources.
- :issue:`583`: fixes failing tests when using simplejson.
- :issue:`599`: fixes `unicode` bug using :func:`!urlparse.urljoin` with the
  `future`_ library in resource serialization.

.. _future: http://python-future.org/

Version 1.0.0b1
---------------

*This is a beta release; these changes will appear in the 1.0.0 release.*

Released on April 2, 2016.

- :issue:`255`: adds support for filtering by PostgreSQL network operators.
- :issue:`257`: ensures additional attributes specified by the user actually exist on
  the model.
- :issue:`363` (partial solution): don't use ``COUNT`` on requests that don't require
  pagination.
- :issue:`404`: **Major overhaul of Flask-Restless to support JSON API**.
- Increases minimum version requirement for ``python-dateutil`` to be strictly
  greater than 2.2 to avoid parsing bug.
- :issue:`331,415`: documents the importance of URL encoding when using the ``like``
  operator to filter results.
- :issue:`376`: add a ``not_like`` operator for filter objects.
- :issue:`431`: adds a ``url_prefix`` keyword argument to the
  :class:`.APIManager` constructor, so one can specify a URL prefix once for
  all created APIs.
- :issue:`449`: roll back the session on any SQLAlchemy error, not just a few.
- :issue:`432,462`: alias relation names when sorting by multiple attributes on a
  relationship.
- :issue:`436,453`: use ``__table__.name`` instead of ``__tablename__`` to infer the
  collection name for the SQLAlchemy model.
- :issue:`440,475`: uses the serialization function provided at the time of
  invoking :meth:`.APIManager.create_api` to serialize each resource correctly,
  depending on its type.